--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home page</ion-title>
+    <ion-title>home page tab</ion-title>
   </ion-toolbar>
 </ion-header>
 
