update page and insert img
hi, mc add this page to our code

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,5 +5,55 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar></ion-searchbar>
+
+  <ion-card>
+    <ion-item>
+      <ion-thumbnail>
+        <ion-img src="./assets/baby.jpg"></ion-img>
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        <h2 id="name"> Item name : Joker</h2>
+        <h2>Item type : Doll</h2>
+        <h2>Item rate : $15.00</h2>    
+      </ion-label>
+    </ion-item>
+  </ion-card> 
+  <ion-card>
+    <ion-item>
+      <ion-thumbnail>
+        <ion-img src="./assets/baby.jpg"></ion-img>
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        <h2 id="name">Item name : Bhabhi</h2>
+        <h2>Item type : Doll</h2>
+        <h2>Item rate : $15.00</h2>    
+      </ion-label>
+    </ion-item>
+  </ion-card> 
+  <ion-card>
+    <ion-item>
+      <ion-thumbnail>
+        <ion-img src="./assets/baby.jpg"></ion-img>
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        <h2 id="name">Item name : Disney</h2>
+        <h2>Item type : Doll</h2>
+        <h2>Item rate : $15.00</h2>    
+      </ion-label>
+    </ion-item>
+  </ion-card> 
+  <ion-card>
+    <ion-item>
+      <ion-thumbnail>
+        <ion-img src="./assets/baby.jpg"></ion-img>
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        <h2 id="name">Item name : Joker</h2>
+        <h2>Item type : Doll</h2>
+        <h2>Item rate : $15.00</h2>    
+      </ion-label>
+    </ion-item>
+  </ion-card> 
 
 </ion-content>
