mylisting page and listing page edit

--- a/src/app/my-listings-add/my-listings-add.page.html
+++ b/src/app/my-listings-add/my-listings-add.page.html
@@ -31,10 +31,17 @@
   </div>
 
   <div>
-    <ion-button (click)="actionsheet()" expand ="block" shape="round"> click here</ion-button>
+    <ion-button (click)="actionsheet()" expand ="block" shape="round"> Choose your Image</ion-button>
   </div>
 
     
 
     
 </ion-content>
+
+<ion-footer>
+  <div class="footeraddbutton">
+    <ion-button shape="round" fill="solid">clickOn</ion-button>
+  </div>
+  
+</ion-footer>
