--- a/src/app/my-listings-add/my-listings-add.page.scss
+++ b/src/app/my-listings-add/my-listings-add.page.scss
@@ -4,3 +4,15 @@
 .addlist .adlisttitle{
     margin-left: -1px;
 }
+
+.imageshow{
+    height: 200px;
+    width: 300px;
+    border: blueviolet;
+    border-radius: 2ex;
+}
+
+.footeraddbutton{
+   // align-items: flex-end
+   float:right;
+}
