--- a/src/app/my-listings/my-listings.page.scss
+++ b/src/app/my-listings/my-listings.page.scss
@@ -3,7 +3,7 @@
     text-decoration: none;
 }
 .footerbutton{
-    align-items: flex-end;
-    box-align: center;
+    float:right;
+   
     box-shadow:blueviolet;
 }
