--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,9 +1,50 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>profile</ion-title>
+    <ion-title>Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <div id="images">
+    <div class="image" *ngFor="let post of (userData | async)?.posts">
+      <ion-card>
+        <ion-image src="https://ucarecdn.com/{{ post.image }}/-/crop/200x200/center/"></ion-image>
+      </ion-card>
+      <ion-content>
+        <p>{{ post.desc }}</p>
+      </ion-content>
+    </div>
+  </div>
+  <form #loginForm="ngForm">
+    <ion-list lines="none">
+      <ion-item lines="none">
+        <p class="intro">Name</p>
+      </ion-item>
+      <ion-item lines="full">
+        <ion-input [(ngModel)]="name" placeholder="Enter Name" name="name"  type="text" required></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <p  class="intro">Email</p>
+      </ion-item>
+      <ion-item lines="full" >
+        <ion-input [(ngModel)]="email" placeholder="Enter Email" name="email" required></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <p  class="intro">Phone</p>
+      </ion-item>
+      <ion-item lines="full" >
+        <ion-input [(ngModel)]="phone" placeholder="Enter Phone Number" name="phone" required></ion-input>
+      </ion-item>
+     
+    </ion-list>
+  
+    <ion-row class="Ion-no-margin ion-no-padding">
+      <ion-col class="Ion-no-margin ion-no-padding">
+        <ion-button class="btn_class" (click)="onLogin(loginForm)" color="secondary" type="submit" expand="block">
+          UPDATE PROFILE 
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </form>
+  
 </ion-content>
