my listing styles update

--- a/src/app/my-listings-add/my-listings-add.page.html
+++ b/src/app/my-listings-add/my-listings-add.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar color="primary" class="addlist">
-    <ion-title class="adlisttitle">Add Your list</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="my-listings"></ion-back-button>
     </ion-buttons>
+    <ion-title class="adlisttitle">Add Your list</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -14,24 +14,24 @@
 
   <div class="inputtextarea1">
     <ion-item>
-      <ion-textarea placeholder="Enter product name here..."></ion-textarea>
+      <ion-textarea class="txt1" placeholder="Enter product name here..."></ion-textarea>
     </ion-item>
   </div>
 
   <div class="inputtextarea2">
     <ion-item>
-      <ion-textarea placeholder="Enter product description here..."></ion-textarea>
+      <ion-textarea class="txt2" placeholder="Enter product description here..."></ion-textarea>
     </ion-item>
   </div>
 
   <div class="inputtextarea3">
     <ion-item>
-      <ion-textarea placeholder="Enter product prize here..."></ion-textarea>
+      <ion-textarea class="txt3" placeholder="Enter product prize here..."></ion-textarea>
     </ion-item>
   </div>
 
   <div>
-    <ion-button (click)="actionsheet()" expand ="block" shape="round"> Choose your Image</ion-button>
+    <ion-button class="click" (click)="actionsheet()" expand ="block" shape="round"> Choose product Image</ion-button>
   </div>
 
     
@@ -41,7 +41,7 @@
 
 <ion-footer>
   <div class="footeraddbutton">
-    <ion-button shape="round" fill="solid">clickOn</ion-button>
+    <ion-button shape="round" fill="solid">Done</ion-button>
   </div>
   
 </ion-footer>
