--- a/src/app/my-listings-add/my-listings-add.page.scss
+++ b/src/app/my-listings-add/my-listings-add.page.scss
@@ -1,18 +1,49 @@
-.addlist{
+.addlist .adlisttitle{
     text-align: center;
 }
-.addlist .adlisttitle{
-    margin-left: -1px;
+
+.addlist{
+    --padding-top:7px;
+    --padding-bottom:7px;
 }
 
 .imageshow{
+    display: block;
+    margin-top: -20px;
+    margin-left: auto;
+    margin-right: auto;
     height: 200px;
     width: 300px;
     border: blueviolet;
     border-radius: 2ex;
 }
 
-.footeraddbutton{
-   // align-items: flex-end
-   float:right;
+.inputtextarea1{
+    margin-top: 40px;
 }
+
+.inputtextarea1, .inputtextarea2, .inputtextarea3{
+    margin-right: 20px;
+}
+
+.txt1, .txt2, .txt3{
+    --padding-top: 20px;
+    --padding-bottom: 0px;
+    padding-left: 20px;
+    font-size: large;
+}
+
+.click{
+    margin-top: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
+    //font-size: large;
+}
+
+.footeraddbutton{
+    //align-items: flex-end;
+    float:right;
+    margin-right: 20px;
+    margin-bottom: 7px;
+    margin-top: 7px;
+ }
