--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -20,6 +20,22 @@
           <ion-icon name="cloud-upload"></ion-icon>Upload
         </button>
 
+        <ion-grid>
+          <ion-row>
+            <ion-col
+              size="6"
+              *ngFor="let photo of photoService.photos; index as position" >
+              <ion-img [src]="photo.webviewPath"></ion-img>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      
+        <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+          <ion-fab-button (click)="addPhotoToGallery()">
+            <ion-icon name="camera"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+
       </ion-buttons>
     </ion-toolbar>
     <ion-list lines="none">
