Home Page developed.
Mc, i add 5 vegetables to this page and i check profile page is ok, but we want to develop some css works to that page,

any way home page is ok

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,53 +5,64 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar></ion-searchbar>
 
   <ion-card>
     <ion-item>
       <ion-thumbnail>
-        <ion-img src="./assets/baby.jpg"></ion-img>
+        <ion-img src="./assets/beet.jpg"></ion-img>
       </ion-thumbnail>
       <ion-label class="ion-text-wrap">
-        <h2 id="name"> Item name : Joker</h2>
-        <h2>Item type : Doll</h2>
-        <h2>Item rate : $15.00</h2>    
+        <h2 id="name"> Name : Beet</h2>
+        <h2>Item type : vegetable</h2>
+        <h2>Rate for 1kg : Rs.100.00/=</h2>    
       </ion-label>
     </ion-item>
   </ion-card> 
   <ion-card>
     <ion-item>
       <ion-thumbnail>
-        <ion-img src="./assets/baby.jpg"></ion-img>
+        <ion-img src="./assets/carrot.png"></ion-img>
       </ion-thumbnail>
       <ion-label class="ion-text-wrap">
-        <h2 id="name">Item name : Bhabhi</h2>
-        <h2>Item type : Doll</h2>
-        <h2>Item rate : $15.00</h2>    
+        <h2 id="name"> Name : Carrot</h2>
+        <h2>Item type : vegetable</h2>
+        <h2>Rate for 1kg : 300.00</h2>    
       </ion-label>
     </ion-item>
   </ion-card> 
   <ion-card>
     <ion-item>
       <ion-thumbnail>
-        <ion-img src="./assets/baby.jpg"></ion-img>
+        <ion-img src="./assets/corn.jpg"></ion-img>
       </ion-thumbnail>
       <ion-label class="ion-text-wrap">
-        <h2 id="name">Item name : Disney</h2>
-        <h2>Item type : Doll</h2>
-        <h2>Item rate : $5.00</h2>    
+        <h2 id="name"> Name : Corn</h2>
+        <h2>Item type : vegetable</h2>
+        <h2>Rate for 1kg : Rs 350.00/=</h2>    
       </ion-label>
     </ion-item>
   </ion-card> 
   <ion-card>
     <ion-item>
       <ion-thumbnail>
-        <ion-img src="./assets/baby.jpg"></ion-img>
+        <ion-img src="./assets/onion.jpg"></ion-img>
       </ion-thumbnail>
       <ion-label class="ion-text-wrap">
-        <h2 id="name">Item name : Joker</h2>
-        <h2>Item type : Doll</h2>
-        <h2>Item rate : $15.00</h2>    
+        <h2 id="name"> Name : Onion</h2>
+        <h2>Item type : vegetable</h2>
+        <h2>Rate for 1kg : Rs 150.00/=</h2>    
+      </ion-label>
+    </ion-item>
+  </ion-card> 
+  <ion-card>
+    <ion-item>
+      <ion-thumbnail>
+        <ion-img src="./assets/redchilli.jpg"></ion-img>
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        <h2 id="name"> Name : Red Chilli</h2>
+        <h2>Item type : vegetable</h2>
+        <h2>Rate for 1kg : Rs 500.00/=</h2>    
       </ion-label>
     </ion-item>
   </ion-card> 
