--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-searchbar></ion-searchbar>
   <ion-card>
     <ion-item>
       <ion-thumbnail>
@@ -26,7 +26,7 @@
       <ion-label class="ion-text-wrap">
         <h2 id="name"> Name : Carrot</h2>
         <h2>Item type : vegetable</h2>
-        <h2>Rate for 1kg : 300.00</h2>    
+        <h2>Rate for 1kg : 300.00/=</h2>    
       </ion-label>
     </ion-item>
   </ion-card> 
