add firebase connection part and some edits

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -11,7 +11,7 @@
     .login-name{
         margin:10px;
         font-size: 1.7rem;
-        color:var(--ion-color-secondary)
+        color:rgb(240, 156, 1);
     }
     .subTitle{
         margin:10px;
