--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,36 +1,33 @@
+<ion-content class="ion-paddig">
 
+  <div class="login-logo">
+    <img src="assets/icon/favicon.png" class="logo_icon">
+    <p class="login-name">Mobile Market Place</p>
+    <p class="subTitle">Enter your login detail to access your account</p>
+  </div>
 
-<ion-content>
-<div class="login-logo">
-  <img src="assets/icon/favicon.png" class="logo_icon">
-  <p class="login-name">Mobile Market Place</p>
-  <p class="subTitle">Enter your login detail to access your account</p>
-</div>
-<form #loginForm="ngForm">
-  <ion-list lines="none">
-    <ion-item lines="none">
-      <ion-input [(ngModel)]="email" placeholder="Email" name="email" required>
+  <h2 class="ion-text-center header_lbl" >Sign in</h2>
+  <form #loginForm="ngForm">
+    <ion-list lines="none">
+      <ion-item lines="none">
+        <ion-input type="email" [(ngModel)]="email" placeholder="Email" name="email"></ion-input>
+      </ion-item>
+      
+      <ion-item lines="none">
+        <ion-input type="password" [(ngModel)]="password" placeholder="Password" name="password"></ion-input>
+      </ion-item>
+    </ion-list>
+    <ion-row class="Ion-no-margin ion-no-padding">
+      <ion-col class="Ion-no-margin ion-no-padding">
+        <ion-button class="btn_class" (click)="login()" color="secondary" type="submit" expand="block">
+          Login
+        </ion-button>
+        <label class="errorMessage">{{errorMessage}}</label>
+      </ion-col>
+    </ion-row>
+  </form>
 
-      </ion-input>
-    </ion-item>
-    <ion-item lines="none">
-      <ion-input [(ngModel)]="password" placeholder="Password" name="password"  type="password" required>
-
-      </ion-input>
-    </ion-item>
-  </ion-list>
-
-  <ion-row class="Ion-no-margin ion-no-padding">
-    <ion-col class="Ion-no-margin ion-no-padding">
-      <ion-button class="btn_class" (click)="onLogin(loginForm)" color="secondary" type="submit" expand="block">
-        Login 
-      </ion-button>
-      <label class="errorMessage">{{errorMessage}}</label>
-    </ion-col>
-  </ion-row>
-</form>
-<p class="createAcc" (click)="register()">Don't have an account?
-  <span class="registerTag">Sign up</span>
-</p>
-
+  <div style="text-align: center;">
+    <p>Don't have account? Register <a [routerLink]="['/register']">Here!</a></p>
+  </div>
 </ion-content>
