--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,50 +1,44 @@
+<ion-header>
+  <ion-toolbar>
+      <ion-button color ="warning" class="login" routerLink="../login" slot="end">
+        <ion-icon slot="icon-only" name="arrow-back-circle-outline"></ion-icon>
+      </ion-button>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content class="ion-padding">
   <ion-slides mode="md" [options]="slideOpts">
     <ion-slide>
-      <ion-button (click)="back()" fill="clear" class="backBtn">
-        <ion-icon slot="start" name="arrow-back-outline" color="dark"></ion-icon>
-      </ion-button>
       <div class="emailForm">
         <h2 class="ion-text-center header_lbl" >Sign Up</h2>
-        <form [formGroup]="registration_form">    
-          <ion-item lines="full">
-            <ion-label position="floating">Email</ion-label>
-            <ion-input type="text" formControlName="email" required></ion-input>
-          </ion-item> 
-      
-          <ion-item lines="full">
-            <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" formControlName="password" required></ion-input>
+        <ion-list>
+          <ion-item>
+            <ion-label position="stacked">Name</ion-label>
+            <ion-input required type="text" [(ngModel)]="name" name="name"></ion-input>
           </ion-item>
-          <ion-item lines="full">
-            <ion-label position="floating">Confirm Password</ion-label>
-            <ion-input type="password" formControlName="confPassword"  required></ion-input>
+
+          <ion-item>
+            <ion-label position="stacked">Email</ion-label>
+            <ion-input required type="email" [(ngModel)]="email" name="email"></ion-input>
           </ion-item>
-      
+
+          <ion-item>
+            <ion-label position="stacked">Phone Number</ion-label>
+            <ion-input required type="tel" [(ngModel)]="phone" name="phone"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="stacked">Password</ion-label>
+            <ion-input required type="password" [(ngModel)]="password" name="password"></ion-input>
+          </ion-item>
+
           <ion-row>
             <ion-col> 
-            <ion-button class="btn_class" [disabled]="!registration_form.valid" color="secondary"  type="submit" (click)="signUp(registration_form.value)" expand="block">Register</ion-button>
+            <ion-button class="btn_class" color="secondary"  type="submit" (click)="register()" expand="block">Register</ion-button>
             </ion-col>
           </ion-row>
-          <ion-row>
-            <ion-col>
-              <ion-button class="btn_class"color="secondary" type="submit" (click)="guest()" expand="block">Sign Up as Guest</ion-button>
-            </ion-col>
-          </ion-row>
-
-        </form>
-       
+        </ion-list>
       </div>
     </ion-slide>
-    <ion-slide>
-      
-      <div class="emailForm">
-        <h2 class="ion-text-center header_lbl">Email Verification</h2>
-        <p class="subtitle ion-text-center">We sent email verification to
-          {{email}}. Please verify to continue...
-        </p>
-      </div>
-    </ion-slide>
-  </ion-slides> 
-
+  </ion-slides>
 </ion-content>
