--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -14,7 +14,7 @@ p{
 }
 .header_lbl{
     font-size: 1.5rem;
-    color: var(--ion-color-secondary) !important;
+    color: orange !important;
 }
 
 .resend_btn{
