--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,17 +1,49 @@
-ion-toolbar{
-    --background:blue
+.wrapper-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-h2[id="name"]{
-    color:lightblue;
-    padding-left: 10px;
+  
+.container {
+    overflow: hidden;
+    box-shadow: 0px 2px 8px 0px var(--clr-gray-light);
+    background-color: white;
+    text-align: center;
+    border-radius: 0px;
+    position: relative;
+    width: 180px;
 }
-h2{
-    padding-left:10px;
+
+.topic {
+    width: 168px;
+    height: 110px;
+    padding: 10px 0px 0px 0px;
 }
-ion-header,ion-toolbar,ion-toolbar{
-    color:white
+
+.top-card{
+    margin: 15px 8px;
 }
-ion-thumbnail,ion-img {
-    height : 100px;
-    width : 100px
+
+.sub-topic{
+    padding-top: 10px;
+}
+
+.img {
+    height: 120px;
+    width: 120px;
+    margin-left: 25px;
+    margin-bottom: 10px;
+}
+
+ion-title{
+    text-align: center;
+    color: orange;
+}
+
+ion-card-title{
+    font-size: 23px;
+}
+
+ion-card-subtitle{
+    font-size: 16px;
 }
