--- a/src/app/my-listings-add/my-listings-add.page.html
+++ b/src/app/my-listings-add/my-listings-add.page.html
@@ -1,58 +1,61 @@
 <ion-header>
-  <ion-toolbar color="primary" class="addlist">
-    
-    <ion-title class="adlisttitle">Add Your list</ion-title>
-    <ion-icon  name="close"slot="end" (click)="dismiss()" size="large"></ion-icon>
-    
-    
+  <ion-toolbar>
+    <ion-title size="large">Add New Item</ion-title>
+    <ion-button color="warning" class="home" routerLink="../tabs/my-listings" slot="end">
+      <ion-icon slot="icon-only" name="arrow-back-circle-outline"></ion-icon>
+    </ion-button> 
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen] ="true">
-  <div class="imageshow">
-    <img src="assets/noimage.jpg">
-  </div>
+<ion-content>
+  <ion-content padding>
+    <form [formGroup]="createItemForm" (submit)="createItem()">
+      <div class="text-area">
+        <ion-textarea hidden=true
+          formControlName="itemCategory"
+          type="text"
+          placeholder="What is the item category?"
+        >
+        </ion-textarea>
 
-  <ion-card>
-    <ion-item>
-      <ion-label position="floating">Enter Product Name</ion-label>
-      <ion-input  type ="text" [(ngModel)]="taskName"></ion-input>
-    </ion-item>
+        <ion-textarea hidden=true
+          formControlName="itemStock"
+          type="text"
+          placeholder="How much stock you have?"
+        >
+        </ion-textarea>
 
-    <ion-item>
-      <ion-lable position="floating"> Category </ion-lable>
-      <span class="listshow">{{taskType}}</span>
-    </ion-item>
-    <ion-chip *ngFor="let types of Categories ; let i = index" (click)="selectType(i)">
-      <ion-lable>{{types}}</ion-lable>
+        <ion-input
+          formControlName="itemName"
+          type="text"
+          placeholder="Enter Product Name"
+        >
+        </ion-input>
 
-    </ion-chip>
-
-    <ion-item>
-      <ion-label position="floating">Enter Product Price</ion-label>
-      <ion-input  type ="number" [(ngModel)]="taskRate"></ion-input>
-    </ion-item>
-
-  </ion-card>
-
+        <ion-input
+          formControlName="itemDescription"
+          type="text"
+          placeholder="Small Discription"
+        >
+        </ion-input>
   
-   
-    
-  
+        <ion-input
+          formControlName="itemPrice"
+          type="text"
+          placeholder="Unit Price"
+        >
+        </ion-input>
 
-
-  <div>
-    <ion-button class="click" (click)="actionsheet()" expand ="block" shape="round"> Choose product Image</ion-button>
-  </div>
-
-    
-
-    
+        <ion-textarea
+          formControlName="image"
+          type="text"
+          placeholder="Upload Image from URL"
+        >
+        </ion-textarea>
+      </div>
+      <ion-button color="success" expand="block" type="submit">
+        Add
+      </ion-button>
+    </form>
+  </ion-content>
 </ion-content>
-
-<ion-footer>
-  <div class="footeraddbutton">
-    <ion-button shape="round" fill="solid" (click)="AddTask()">Done</ion-button>
-  </div>
-  
-</ion-footer>
