--- a/src/app/my-listings/my-listings.page.scss
+++ b/src/app/my-listings/my-listings.page.scss
@@ -1,31 +1,42 @@
-.listmenu{
+.container{
+    width: 100%;
+    padding: 20px;
+
+    ion-label {
+        display: block;
+    }
+
+    .card{
+        border-radius: 10px;
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
+        margin-top: 15px;
+        position: relative;
+
+
+        padding-top:10px;
+        padding-left:10px;
+
+        display: flex;
+        flex-direction: row;
+        height: 120px;
+    }
+
+    .img{
+        height: 100px;
+            width: 100px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+    }
+}
+
+ion-title{
     text-align: center;
-    text-decoration: none;
-    
-}
-.footerbutton{
-    float:right;
-   
-    box-shadow:blueviolet;
-}
-.contentstart{
-    float:right;
-    margin-left: -13px;
+    color: orange;
 }
 
-.cardstart{
-    margin-left: 25px;
-    padding-left: unset;
-    padding-right: unset;
-    padding-inline-start: var(--padding-start);
-    padding-inline-end: var(--padding-end);
+.add{
+    margin-left: 270px;
 }
-
-.cardstart .contentstart .image img{
-    margin-right: 40px;
-}
-
-.text11{
-    color: cornflowerblue;
-}
-
